--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "carbon-components": "^8.18.5",
     "carbon-components-react": "^5.41.6",
     "carbon-icons": "^6.3.2",
+    "classnames": "^2.2.5",
     "gridlex": "^2.7.1",
     "husky": "^0.14.3",
     "js-sha3": "^0.7.0",
