Added pre-build css step for testing

--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "start": "cross-env NODE_ENV=development npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
-    "test": "react-scripts test --env=jsdom",
+    "run-test": "react-scripts test --env=jsdom",
+    "test": "npm-run-all -p build-css test",
     "precommit": "lint-staged",
     "eject": "react-scripts eject",
     "start-storybook": "cross-env start-storybook -p $PORT -c .storybook",
