--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "carbon-components": "^8.18.5",
     "carbon-components-react": "^5.41.6",
     "carbon-icons": "^6.3.2",
+    "classnames": "^2.2.5",
     "gridlex": "^2.7.1",
     "husky": "^0.14.3",
     "js-sha3": "^0.7.0",
@@ -17,6 +18,7 @@
     "prettier": "^1.11.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
+    "react-jazzicon": "0.0.1",
     "react-redux": "^5.0.7",
     "react-scripts": "^1.1.1",
     "redux-logger": "^3.0.6",
@@ -26,8 +28,8 @@
   },
   "lint-staged": {
     "src/**/*.{js,jsx,json,css}": [
-      "prettier --single-quote --write",
-      "git add"
+    "prettier --single-quote --write",
+    "git add"
     ]
   },
   "scripts": {
@@ -37,7 +39,8 @@
     "start": "cross-env NODE_ENV=development npm-run-all -p watch-css start-js",
     "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
-    "test": "react-scripts test --env=jsdom",
+    "run-test": "react-scripts test --env=jsdom",
+    "test": "npm-run-all build-css run-test",
     "precommit": "lint-staged",
     "eject": "react-scripts eject",
     "start-storybook": "cross-env start-storybook -p $PORT -c .storybook",
