--- a/package.json
+++ b/package.json
@@ -59,8 +59,10 @@
     "@storybook/react": "^3.4.0",
     "babel-core": "^6.26.0",
     "babel-runtime": "^6.26.0",
+    "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.1.4",
-    "ws": "3.3.2",
-    "surge": "^0.20.1"
+    "extract-text-webpack-plugin": "^3.0.2",
+    "surge": "^0.20.1",
+    "ws": "3.3.2"
   }
 }
