Added Storybook step for building process

--- a/package.json
+++ b/package.json
@@ -48,6 +48,8 @@
     "storybook": "cross-env PORT=8080 npm-run-all -p watch-css start-storybook",
     "run-storybook": "build-storybook -c .storybook -o .out",
     "build-storybook": "npm-run-all build-css run-storybook",
+    "deploy-storybook:dev": "surge build/ --domain storybook-mybit-dapp-ui-dev.surge.sh",
+    "deploy-storybook:prod": "surge build/ --domain storybook-mybit-dapp-ui.surge.sh",
     "deploy:dev": "surge build/ --domain mybit-dapp-ui-dev.surge.sh",
     "deploy:prod": "surge build/ --domain mybit-dapp-ui.surge.sh",
     "deploy": "surge build/"
