--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,8 +15,21 @@ jobs:
 
       - run: yarn build
 
+      - run: yarn build-storybook
+
       - deploy:
-          name: Deploy to Surge
+          name: Deploy Storybook to Surge
+          command: |
+            if [ "${CIRCLE_BRANCH}" == "develop" ]; then
+              yarn run deploy-storybook:dev
+            elif [ "${CIRCLE_BRANCH}" == "master" ]; then
+              yarn run deploy-storybook:prod
+            else
+              SANITIZED_BRANCH=$(tr "/" "-" <<<$CIRCLE_BRANCH)
+              yarn run deploy --domain storybook-pr-${SANITIZED_BRANCH}-mybit-dapp-ui-dev.surge.sh
+            fi
+
+          name: Deploy Application to Surge
           command: |
             if [ "${CIRCLE_BRANCH}" == "develop" ]; then
               yarn run deploy:dev
