This is why copy pasting is bad

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -28,6 +28,6 @@ jobs:
               yarn run deploy:prod
             else
               SANITIZED_BRANCH=$(tr "/" "-" <<<$CIRCLE_BRANCH)
-              yarn run deploy --domain storybook-pr-${SANITIZED_BRANCH}-mybit-dapp-ui-dev.surge.sh
+              yarn run deploy-storybook --domain storybook-pr-${SANITIZED_BRANCH}-mybit-dapp-ui-dev.surge.sh
               yarn run deploy --domain pr-${SANITIZED_BRANCH}-mybit-dapp-ui-dev.surge.sh
             fi
