--- a/package.json
+++ b/package.json
@@ -64,6 +64,11 @@
     "babel-runtime": "^6.26.0",
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.1.4",
+    "eslint": "^4.19.1",
+    "eslint-config-airbnb": "^16.1.0",
+    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-jsx-a11y": "^6.0.3",
+    "eslint-plugin-react": "^7.7.0",
     "extract-text-webpack-plugin": "^3.0.2",
     "surge": "^0.20.1",
     "ws": "3.3.2"
