--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,9 +1,10 @@
 {
   "env": {
-    "browser": true
+    "browser": true,
+    "mocha": true
   },
   "extends": "airbnb",
   "rules": {
-    "react/jsx-filename-extension": false
+    "react/jsx-filename-extension": 0
   }
 }
