Updated test use with Enzyme

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-sass-chokidar": "^1.1.0",
     "npm-run-all": "^4.1.2",
     "prettier": "^1.11.1",
+    "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-jazzicon": "0.0.1",
@@ -67,6 +68,8 @@
     "babel-runtime": "^6.26.0",
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.1.4",
+    "enzyme": "^3.3.0",
+    "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
     "eslint-plugin-import": "^2.11.0",
