--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,7 +11,9 @@ jobs:
 
       - run: yarn install
 
-      # - run: yarn run lint
+      - run: yarn run build-css
+
+      - run: yarn run lint
 
       - run: yarn test
 
