--- a/package.json
+++ b/package.json
@@ -3,6 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@storybook/addon-actions": "^3.4.3",
+    "@storybook/react": "^3.4.3",
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "carbon-components": "^8.18.5",
@@ -10,12 +12,9 @@
     "carbon-icons": "^6.3.2",
     "classnames": "^2.2.5",
     "gridlex": "^2.7.1",
-    "husky": "^0.14.3",
     "js-sha3": "^0.7.0",
-    "lint-staged": "^7.0.0",
     "node-sass-chokidar": "^1.1.0",
     "npm-run-all": "^4.1.2",
-    "prettier": "^1.11.1",
     "prop-types": "^15.6.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
@@ -23,16 +22,11 @@
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-scripts": "^1.1.1",
+    "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "semantic-ui-css": "^2.3.0",
     "semantic-ui-react": "^0.78.3",
     "web3": "0.19.0"
-  },
-  "lint-staged": {
-    "src/**/*.{js,jsx,json,css}": [
-      "prettier --single-quote --write",
-      "git add"
-    ]
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -43,8 +37,6 @@
     "build": "npm-run-all build-css build-js",
     "run-test": "react-scripts test --env=jsdom",
     "test": "npm-run-all build-css run-test",
-    "precommit": "lint-staged",
-    "format": "prettier --single-quote --write src/*.js src/**/*.js",
     "eject": "react-scripts eject",
     "start-storybook": "cross-env start-storybook -p $PORT -c .storybook",
     "storybook": "cross-env PORT=8080 npm-run-all -p watch-css start-storybook",
@@ -60,10 +52,6 @@
     "lint:fix": "eslint . --fix"
   },
   "devDependencies": {
-    "@storybook/addon-actions": "^3.4.0",
-    "@storybook/addon-links": "^3.4.0",
-    "@storybook/addons": "^3.4.0",
-    "@storybook/react": "^3.4.0",
     "babel-core": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "compression-webpack-plugin": "^1.1.11",
