--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-scripts": "^1.1.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.2.0",
     "web3": "0.19.0"
   },
   "scripts": {
