--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "classnames": "^2.2.5",
     "dayjs": "^1.6.0",
     "gridlex": "^2.7.1",
-    "js-sha3": "^0.7.0",
     "node-sass-chokidar": "^1.1.0",
     "npm-run-all": "^4.1.2",
     "prop-types": "^15.6.1",
@@ -26,7 +25,7 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "web3": "0.19.0"
+    "web3": "1.0.0-beta.34"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
