--- a/package.json
+++ b/package.json
@@ -3,18 +3,18 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@storybook/addon-actions": "^3.4.3",
-    "@storybook/react": "^3.4.3",
+    "@storybook/addon-actions": "^3.4.5",
+    "@storybook/react": "^3.4.5",
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
-    "carbon-components": "^8.18.22",
-    "carbon-components-react": "^5.44.0",
+    "carbon-components": "^8.22.6",
+    "carbon-components-react": "^5.51.5",
     "carbon-icons": "^6.3.2",
     "classnames": "^2.2.5",
-    "dayjs": "^1.6.0",
+    "dayjs": "^1.6.3",
     "gridlex": "^2.7.1",
-    "node-sass-chokidar": "^1.1.0",
-    "npm-run-all": "^4.1.2",
+    "node-sass-chokidar": "^1.3.0",
+    "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
@@ -25,7 +25,7 @@
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.2.0",
-    "web3": "1.0.0-beta.34"
+    "web3": "^1.0.0-beta.34"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -54,14 +54,14 @@
     "babel-core": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "compression-webpack-plugin": "^1.1.11",
-    "cross-env": "^5.1.4",
+    "cross-env": "^5.1.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
     "eslint": "^4.19.1",
     "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.11.0",
+    "eslint-plugin-import": "^2.12.0",
     "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.7.0",
+    "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "surge": "^0.20.1",
     "ws": "3.3.2"
