--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "classnames": "^2.2.5",
     "dayjs": "^1.6.3",
     "gridlex": "^2.7.1",
+    "include-media": "^1.4.9",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.1",
