--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-jazzicon": "0.0.1",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
+    "react-router-redux": "^5.0.0-alpha.9",
     "react-scripts": "^1.1.1",
     "redux": "^4.0.0",
     "redux-logger": "^3.0.6",
