Adding hashes and contributors to builds

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,6 +25,8 @@ jobs:
             GIT_HASH=$(git rev-parse --short HEAD)
             SANITIZED_BRANCH=$(tr "/" "-" <<<$CIRCLE_BRANCH)
             VERY_SANITIZED_BRANCH=$(tr "." "-" <<<$SANITIZED_BRANCH)
+            echo ${GIT_HASH} > build/version
+            cp CONTRIBUTORS > build/contributors
             BUILD_URL=$(npx now --name app.mybit.io build -t $NOW_DEVELOPMENT_TOKEN --public)
             STORYBOOK_URL=$(npx now --name storybook.mybit.io .out -t $NOW_DEVELOPMENT_TOKEN --public)
             npx now alias ${BUILD_URL} ${GIT_HASH}-app-mybit-io-dev -t $NOW_DEVELOPMENT_TOKEN
