--- a/.travis.yml
+++ b/.travis.yml
@@ -10,8 +10,8 @@ script:
   - GIT_HASH=$(git rev-parse --short HEAD)
   - echo ${GIT_HASH} > build/version
   - cp CONTRIBUTORS build/contributors
-  - if [ ! "$TRAVIS_PULL_REQUEST" = "false" ]; then BUILD_URL=$(npx now --name app.mybit.io build -t $NOW_PROD_TOKEN); fi
-  - if [ ! "$TRAVIS_PULL_REQUEST" = "false" ]; then STORYBOOK_URL=$(npx now --name storybook.mybit.io build -t $NOW_PROD_TOKEN); fi
+  - BUILD_URL=$(npx now --name app.mybit.io build -t $NOW_PROD_TOKEN)
+  - STORYBOOK_URL=$(npx now --name storybook.mybit.io build -t $NOW_PROD_TOKEN)
   - if [ "$TRAVIS_BRANCH" = "develop" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${BUILD_URL} app-staging.mybit.io -t $NOW_PROD_TOKEN; fi
   - if [ "$TRAVIS_BRANCH" = "develop" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${STORYBOOK_URL} storybook-staging.mybit.io -t $NOW_PROD_TOKEN; fi
   - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${BUILD_URL} app.mybit.io -t $NOW_PROD_TOKEN; fi
