--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
-    "react-jazzicon": "0.0.1",
+    "react-jazzicon": "^0.1.0",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.2.2",
     "react-router-redux": "^5.0.0-alpha.9",
