--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@storybook/addon-actions": "^3.4.5",
     "@storybook/react": "^3.4.5",
+    "antd": "^3.7.0",
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "carbon-components": "^8.22.6",
