--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "carbon-icons": "^7.0.7",
     "classnames": "^2.2.5",
     "dayjs": "^1.6.3",
+    "detect-browser": "^3.0.0",
     "gridlex": "^2.7.1",
     "history": "^4.7.2",
     "include-media": "^1.4.9",
