--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,10 +1,39 @@
 {
-  "env": {
-    "browser": true,
-    "jest": true
+  "env": { 
+    "es6": true,
+    "browser": true
   },
-  "extends": "airbnb",
+  "extends": [
+    "airbnb",
+    "plugin:prettier/recommended",
+    "eslint:recommended",
+    "plugin:react/recommended"
+  ],
+  "globals": {
+    "i18n": true,
+    "mist": true,
+    "beforeEach": true,
+    "LocalStore": true,
+    "web3": true,
+    "Tabs": true,
+    "Tracker": true,
+    "_": true,
+    "window": true,
+    "location": true,
+    "document": true,
+    "Promise": true,
+    "require": true,
+    "global": true,
+    "store": true,
+    "exports": true,
+    "module": true,
+    "console": true,
+    "process": true
+  },
   "rules": {
-    "react/jsx-filename-extension": 0
+    "react-jsx-filename-extension": 0
+  },
+  "parserOptions": {
+    "sourceType": "module"
   }
 }
