--- a/package.json
+++ b/package.json
@@ -2,47 +2,49 @@
   "name": "frontend",
   "version": "0.1.0",
   "private": true,
+  "browserslist": {
+    "development": [
+      "last 2 chrome versions",
+      "last 2 firefox versions",
+      "last 2 brave versions",
+      "last 2 opera versions"
+    ],
+    "production": [
+      ">0.25%",
+      "not op_mini all"
+    ]
+  },
+  "engines": {
+    "node": "^8.11.3"
+  },
   "dependencies": {
-    "@storybook/addon-actions": "^3.4.5",
-    "@storybook/react": "^3.4.5",
-    "antd": "^3.7.0",
+    "@storybook/addon-actions": "^3.4.8",
+    "@storybook/react": "^3.4.8",
+    "antd": "^3.7.3",
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "carbon-components": "^8.22.6",
     "carbon-components-react": "^5.51.5",
     "carbon-icons": "^7.0.7",
-    "classnames": "^2.2.5",
-    "dayjs": "^1.6.3",
+    "classnames": "^2.2.6",
+    "dayjs": "^1.7.4",
     "detect-browser": "^3.0.0",
+    "eslint": "^5.2.0",
+    "eslint-config-prettier": "^2.9.0",
+    "eslint-plugin-prettier": "^2.6.2",
+    "eslint-plugin-react": "^7.10.0",
     "gridlex": "^2.7.1",
     "history": "^4.7.2",
     "include-media": "^1.4.9",
-    "node-sass-chokidar": "^1.3.0",
+    "node-sass-chokidar": "^1.3.3",
     "npm-run-all": "^4.1.3",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.2",
-    "react-dom": "^16.3.2",
-    "react-jazzicon": "^0.1.0",
-    "react-router-dom": "^4.2.2",
-    "react-scripts": "2.0.0-next.3e165448",
-    "web3": "^1.0.0-beta.34"
-  },
-  "scripts": {
-    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
-    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "react-scripts start",
-    "start": "cross-env NODE_ENV=development npm-run-all -p watch-css start-js",
-    "build-js": "react-scripts build",
-    "build": "npm-run-all build-css build-js",
-    "run-test": "react-scripts test --env=jsdom",
-    "test": "npm-run-all build-css run-test",
-    "eject": "react-scripts eject",
-    "start-storybook": "cross-env start-storybook -p $PORT -c .storybook",
-    "storybook": "cross-env PORT=8080 npm-run-all -p watch-css start-storybook",
-    "run-storybook": "build-storybook -c .storybook -o .out",
-    "build-storybook": "npm-run-all build-css run-storybook",
-    "lint": "eslint --ignore-path .gitignore .",
-    "lint:fix": "eslint --ignore-path .gitignore --fix ."
+    "prop-types": "^15.6.2",
+    "react": "^16.4.2",
+    "react-dom": "^16.4.2",
+    "react-jazzicon": "^0.1.1",
+    "react-router-dom": "^4.3.1",
+    "react-scripts": "1.1.4",
+    "web3": "^1.0.0-beta.35"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
@@ -51,25 +53,25 @@
     "cross-env": "^5.1.5",
     "enzyme": "^3.3.0",
     "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "prettier": "^1.14.0",
     "surge": "^0.20.1",
     "ws": "3.3.2"
   },
-  "browserslist": {
-    "development": [
-      "last 2 chrome versions",
-      "last 2 firefox versions",
-      "last 2 edge versions"
-    ],
-    "production": [
-      ">0.25%",
-      "not op_mini all",
-      "ie 11"
-    ]
+  "scripts": {
+    "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
+    "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
+    "start-js": "react-scripts start",
+    "start": "cross-env NODE_ENV=development npm-run-all -p watch-css start-js",
+    "format-code": "prettier --single-quote --write 'src/**/*.js'",
+    "build-js": "react-scripts build",
+    "build": "npm-run-all build-css build-js",
+    "run-test": "react-scripts test --env=jsdom",
+    "test": "npm-run-all build-css run-test",
+    "eject": "react-scripts eject",
+    "start-storybook": "cross-env start-storybook -p $PORT -c .storybook",
+    "storybook": "cross-env PORT=8080 npm-run-all -p watch-css start-storybook",
+    "run-storybook": "build-storybook -c .storybook -o .out",
+    "build-storybook": "npm-run-all build-css run-storybook"
   }
 }
