--- a/now.json
+++ b/now.json
@@ -1,5 +1,5 @@
 {
-  "redirects": [
-    { "source": "/*", "destination": "/" }
+  "rewrites": [
+    { "source": "/*", "destination": "/index.html" }
   ]
 }
