--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
     "classnames": "^2.2.5",
     "dayjs": "^1.6.3",
     "detect-browser": "^3.0.0",
+    "dotenv": "^6.0.0",
+    "express": "^4.16.3",
+    "express-basic-auth": "^1.1.5",
     "gridlex": "^2.7.1",
     "history": "^4.7.2",
     "include-media": "^1.4.9",
@@ -42,6 +45,7 @@
     "run-storybook": "build-storybook -c .storybook -o .out",
     "build-storybook": "npm-run-all build-css run-storybook",
     "lint": "eslint --ignore-path .gitignore .",
+    "now-start": "node server.js",
     "lint:fix": "eslint --ignore-path .gitignore --fix .",
     "format-code": "prettier --single-quote --write 'src/**/*.js'"
   },
