--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-jazzicon": "^0.1.0",
-    "react-router-dom": "^4.2.2",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.0-next.3e165448",
     "web3": "^1.0.0-beta.34"
   },
@@ -63,6 +63,7 @@
     "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "^3.0.2",
     "surge": "^0.20.1",
+    "svg-react-loader": "^0.4.5",
     "ws": "3.3.2"
   },
   "browserslist": {
