--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,7 @@ cache:
   directories:
   - node_modules
 yarn: true
-before_script: yarn build && yarn build-storybook
+before_script: yarn build
 script:
   - GIT_HASH=$(git rev-parse --short HEAD)
   - echo ${GIT_HASH} > build/version
