--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "gridlex": "^2.7.1",
     "history": "^4.7.2",
     "include-media": "^1.4.9",
+    "lint": "^1.1.2",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.1",
