--- a/package.json
+++ b/package.json
@@ -3,95 +3,48 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@babel/core": "7.0.0-beta.46",
-    "@babel/runtime": "7.0.0-beta.46",
     "@storybook/addon-actions": "^3.4.5",
     "@storybook/react": "^3.4.5",
     "antd": "^3.9.2",
-    "autoprefixer": "8.5.0",
     "axios": "^0.18.0",
-    "babel-core": "7.0.0-bridge.0",
-    "babel-eslint": "8.2.3",
-    "babel-jest": "22.4.3",
-    "babel-loader": "8.0.0-beta.0",
-    "babel-plugin-named-asset-import": "1.0.0-next.3e165448",
-    "babel-preset-react-app": "4.0.0-next.3e165448",
-    "bfj": "5.2.0",
     "bluebird": "^3.5.1",
     "carbon-components": "^8.22.6",
     "carbon-components-react": "^5.51.5",
     "carbon-icons": "^7.0.7",
-    "case-sensitive-paths-webpack-plugin": "2.1.2",
-    "chalk": "2.4.1",
     "classnames": "^2.2.5",
-    "css-loader": "0.28.11",
     "dayjs": "^1.6.3",
     "detect-browser": "^3.0.0",
-    "dotenv": "5.0.1",
-    "dotenv-expand": "4.2.0",
-    "eslint": "4.19.1",
-    "eslint-config-react-app": "3.0.0-next.3e165448",
-    "eslint-loader": "2.0.0",
-    "eslint-plugin-flowtype": "2.46.3",
-    "eslint-plugin-import": "2.11.0",
-    "eslint-plugin-jsx-a11y": "6.0.3",
-    "eslint-plugin-react": "7.8.2",
+    "dotenv": "^6.0.0",
     "express": "^4.16.3",
     "express-basic-auth": "^1.1.5",
-    "file-loader": "1.1.11",
-    "fs-extra": "5.0.0",
-    "graphql": "0.13.2",
-    "graphql-tag": "2.9.2",
     "gridlex": "^2.7.1",
     "history": "^4.7.2",
-    "html-webpack-plugin": "3.2.0",
-    "identity-obj-proxy": "3.0.0",
     "include-media": "^1.4.9",
-    "jest": "22.4.3",
-    "loader-utils": "^1.1.0",
-    "mini-css-extract-plugin": "^0.4.0",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
-    "object-assign": "4.1.1",
-    "optimize-css-assets-webpack-plugin": "^4.0.1",
-    "postcss-flexbugs-fixes": "3.3.1",
-    "postcss-loader": "2.1.5",
-    "promise": "8.0.1",
     "prop-types": "^15.6.1",
-    "raf": "3.4.0",
     "react": "^16.3.2",
-    "react-dev-utils": "6.0.0-next.3e165448",
     "react-dom": "^16.3.2",
     "react-jazzicon": "^0.1.0",
-    "react-router-dom": "^4.3.1",
-    "resolve": "1.6.0",
-    "sass-loader": "7.0.1",
-    "style-loader": "0.21.0",
-    "svgr": "1.9.2",
-    "sw-precache-webpack-plugin": "0.11.5",
-    "thread-loader": "1.1.5",
-    "uglifyjs-webpack-plugin": "1.2.5",
-    "url-loader": "1.0.1",
-    "web3": "^1.0.0-beta.34",
-    "webpack": "4.8.3",
-    "webpack-dev-server": "3.1.4",
-    "webpack-manifest-plugin": "2.0.3",
-    "whatwg-fetch": "2.0.4"
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "2.0.0-next.3e165448",
+    "web3": "^1.0.0-beta.34"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "node scripts/start.js",
+    "start-js": "react-app-rewired start",
     "start": "cross-env NODE_ENV=development npm-run-all -p watch-css start-js",
-    "build-js": "node scripts/build.js",
+    "build-js": "react-app-rewired build",
     "build": "npm-run-all build-css build-js",
-    "run-test": "node scripts/test.js --env=jsdom",
+    "run-test": "react-app-rewired test --env=jsdom",
     "test": "npm-run-all build-css run-test",
+    "eject": "react-scripts eject",
     "start-storybook": "cross-env start-storybook -p $PORT -c .storybook",
     "storybook": "cross-env PORT=8080 npm-run-all -p watch-css start-storybook",
     "run-storybook": "build-storybook -c .storybook -o .out",
     "build-storybook": "npm-run-all build-css run-storybook",
-    "lint": "eslint .",
+    "lint": "eslint --ignore-path .gitignore .",
     "now-start": "node server.js",
     "lint:fix": "eslint --ignore-path .gitignore --fix .",
     "format-code": "prettier --single-quote --write 'src/**/*.js'"
@@ -110,6 +63,7 @@
     "eslint-plugin-jsx-a11y": "^6.0.3",
     "eslint-plugin-react": "^7.8.2",
     "extract-text-webpack-plugin": "^3.0.2",
+    "react-app-rewired": "^1.6.2",
     "surge": "^0.20.1",
     "ws": "3.3.2"
   },
@@ -123,46 +77,6 @@
       ">0.25%",
       "not op_mini all",
       "ie 11"
-    ]
-  },
-  "jest": {
-    "collectCoverageFrom": [
-      "src/**/*.{js,jsx,mjs}"
-    ],
-    "setupFiles": [
-      "<rootDir>/config/polyfills.js"
-    ],
-    "testMatch": [
-      "**/__tests__/**/*.{js,jsx,mjs}",
-      "**/?(*.)(spec|test).{js,jsx,mjs}"
-    ],
-    "roots": [
-      "<rootDir>/src"
-    ],
-    "testEnvironment": "node",
-    "testURL": "http://localhost",
-    "transform": {
-      "^.+\\.(js|jsx|mjs)$": "<rootDir>/config/jest/babelTransform.js",
-      "^.+\\.css$": "<rootDir>/config/jest/cssTransform.js",
-      "^.+\\.(graphql)$": "<rootDir>/config/jest/graphqlTransform.js",
-      "^(?!.*\\.(js|jsx|mjs|css|json|graphql)$)": "<rootDir>/config/jest/fileTransform.js"
-    },
-    "transformIgnorePatterns": [
-      "[/\\\\]node_modules[/\\\\].+\\.(js|jsx|mjs)$",
-      "^.+\\.module\\.(css|sass|scss)$"
-    ],
-    "moduleNameMapper": {
-      "^react-native$": "react-native-web",
-      "^.+\\.module\\.(css|sass|scss)$": "identity-obj-proxy"
-    },
-    "moduleFileExtensions": [
-      "web.js",
-      "js",
-      "json",
-      "web.jsx",
-      "jsx",
-      "node",
-      "mjs"
     ]
   }
 }
