--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start-js": "react-app-rewired start",
     "start": "cross-env NODE_ENV=development npm-run-all -p watch-css start-js",
-    "build-js": "react-app-rewired build",
+    "build-js": "GENERATE_SOURCEMAP=false react-app-rewired build",
     "build": "npm-run-all build-css build-js",
     "run-test": "react-scripts test --env=jsdom",
     "test": "npm-run-all build-css run-test",
