--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "react-jazzicon": "^0.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.0.0-next.3e165448",
-    "web3": "^1.0.0-beta.34"
+    "web3": "1.0.0-beta.35"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
