--- a/package.json
+++ b/package.json
@@ -46,9 +46,9 @@
     "storybook": "cross-env PORT=8080 npm-run-all -p watch-css start-storybook",
     "run-storybook": "build-storybook -c .storybook -o .out",
     "build-storybook": "npm-run-all build-css run-storybook",
-    "lint": "eslint .",
+    "lint": "eslint --ignore-path .gitignore .",
     "now-start": "node server.js",
-    "lint:fix": "eslint --fix .",
+    "lint:fix": "eslint --ignore-path .gitignore --fix ."
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge",
