--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@storybook/addon-actions": "^3.4.5",
     "@storybook/react": "^3.4.5",
-    "antd": "^3.9.2",
+    "antd": "^3.7.0",
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "carbon-components": "^8.22.6",
@@ -20,24 +20,22 @@
     "gridlex": "^2.7.1",
     "history": "^4.7.2",
     "include-media": "^1.4.9",
-    "lint": "^1.1.2",
     "node-sass-chokidar": "^1.3.0",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
-    "react-app-rewired": "^1.6.2",
     "react-dom": "^16.3.2",
     "react-jazzicon": "^0.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.0.0-next.3e165448",
-    "web3": "1.0.0-beta.35"
+    "web3": "^1.0.0-beta.34"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
-    "start-js": "react-app-rewired start",
+    "start-js": "react-scripts start",
     "start": "cross-env NODE_ENV=development npm-run-all -p watch-css start-js",
-    "build-js": "GENERATE_SOURCEMAP=false react-app-rewired build",
+    "build-js": "react-scripts build",
     "build": "npm-run-all build-css build-js",
     "run-test": "react-scripts test --env=jsdom",
     "test": "npm-run-all build-css run-test",
@@ -48,11 +46,11 @@
     "build-storybook": "npm-run-all build-css run-storybook",
     "lint": "eslint --ignore-path .gitignore .",
     "now-start": "node server.js",
-    "lint:fix": "eslint --ignore-path .gitignore --fix ."
+    "lint:fix": "eslint --ignore-path .gitignore --fix .",
+    "format-code": "prettier --single-quote --write 'src/**/*.js'"
   },
   "devDependencies": {
-    "babel-core": "^7.0.0-bridge",
-    "babel-plugin-inline-react-svg": "^0.5.4",
+    "babel-core": "^6.26.0",
     "babel-runtime": "^6.26.0",
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.1.5",
