--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
 
       - run: yarn test
 
-      - run: DEBUG=babel yarn build
+      - run: yarn build
 
       - deploy:
           name: Deploy to Now
