--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "react-dom": "^16.3.2",
     "react-jazzicon": "^0.1.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.0.0-next.3e165448",
+    "react-scripts": "2.0.4",
     "web3": "1.0.0-beta.35"
   },
   "scripts": {
