--- a/now.json
+++ b/now.json
@@ -1,6 +1,7 @@
 {
   "name": "app.mybit.io",
   "env": {
-    "MYBIT_GO_ADMIN_PASSWORD": "@mybit-go-admin-password"
+    "MYBIT_GO_ADMIN_PASSWORD": "@mybit-go-admin-password",
+    "INFURA_API_KEY": "@infura-api-key"
   }
 }
