--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "classnames": "^2.2.5",
-    "dayjs": "^1.6.3",
+    "dayjs": "^1.7.7",
     "detect-browser": "^3.0.0",
     "dotenv": "^6.0.0",
     "express": "^4.16.3",
@@ -19,6 +19,7 @@
     "include-media": "^1.4.9",
     "lint": "^1.1.2",
     "node-sass-chokidar": "^1.3.0",
+    "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
     "prop-types": "^15.6.1",
     "react": "^16.3.2",
@@ -27,7 +28,8 @@
     "react-jazzicon": "^0.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.0.0-next.3e165448",
-    "web3": "1.0.0-beta.35"
+    "web3": "1.0.0-beta.35",
+    "websocket": "^1.0.28"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -37,7 +39,7 @@
     "build-js": "GENERATE_SOURCEMAP=false react-app-rewired build",
     "build": "npm-run-all build-css build-js",
     "run-test": "react-scripts test --env=jsdom",
-    "test": "npm-run-all build-css run-test",
+    "test": "npx babel server.js --out-file script-compiled.js --presets=es2015",
     "eject": "react-scripts eject",
     "start-storybook": "cross-env start-storybook -p $PORT -c .storybook",
     "storybook": "cross-env PORT=8080 npm-run-all -p watch-css start-storybook",
@@ -45,11 +47,15 @@
     "build-storybook": "npm-run-all build-css run-storybook",
     "lint": "eslint --ignore-path .gitignore .",
     "now-start": "node server.js",
+    "start-dev": "NODE_ENV=development nodemon server.js",
     "lint:fix": "eslint --ignore-path .gitignore --fix ."
   },
   "devDependencies": {
+    "@babel/preset-env": "^7.1.0",
+    "babel-cli": "^6.26.0",
     "babel-core": "^7.0.0-bridge",
     "babel-plugin-inline-react-svg": "^0.5.4",
+    "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.26.0",
     "compression-webpack-plugin": "^1.1.11",
     "cross-env": "^5.1.5",
