--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-jazzicon": "^0.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.0.0-next.3e165448",
+    "styled-components": "^3.4.10",
     "web3": "1.0.0-beta.35"
   },
   "scripts": {
