--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,11 +1,13 @@
 {
-    "type": "node",
-    "request": "launch",
-    "name": "`yarn start`",
-    "cwd": "${workspaceRoot}",
-    "runtimeExecutable": "yarn",
-    "runtimeArgs": [
-      "start"
-    ],
-    "stopOnEntry": false
-  }
+    "version": "0.1.0",
+    "configurations": [
+        {
+            "name": "Attach to url with files served from ./out",
+            "type": "chrome",
+            "request": "attach",
+            "port": 9222,
+            "url": "http://localhost:3000/explore",
+            "webRoot": "${workspaceFolder}/out"
+        }
+    ]
+}
