--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ yarn: true
 before_script: yarn build
 script:
   - GIT_HASH=$(git rev-parse --short HEAD)
-  - echo ${GIT_HASH} > build/version
-  - cp CONTRIBUTORS build/contributors
-  - BUILD_URL=$(npx now --name app.mybit.io build -t $NOW_PROD_TOKEN)
+  - echo ${GIT_HASH} > version
+  - cp CONTRIBUTORS contributors
+  - BUILD_URL=$(npx now --name app.mybit.io -t $NOW_PROD_TOKEN)
   - if [ "$TRAVIS_BRANCH" = "develop" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${BUILD_URL} app-staging.mybit.io -t $NOW_PROD_TOKEN; fi
   - if [ "$TRAVIS_BRANCH" = "master" -a "$TRAVIS_PULL_REQUEST" = "false" ]; then npx now alias ${BUILD_URL} app.mybit.io -t $NOW_PROD_TOKEN; fi
