--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.2.4",
   "private": true,
   "dependencies": {
-    "antd": "^3.9.2",
+    "antd": "^3.10.1",
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
     "classnames": "^2.2.5",
@@ -19,16 +19,16 @@
     "node-sass-chokidar": "^1.3.0",
     "nodemon": "^1.18.4",
     "npm-run-all": "^4.1.3",
-    "prop-types": "^15.6.1",
-    "react": "^16.3.2",
+    "prop-types": "^15.6.2",
+    "react": "^16.5.2",
     "react-app-rewired": "^1.6.2",
-    "react-dom": "^16.3.2",
+    "react-dom": "^16.5.2",
     "react-jazzicon": "^0.1.0",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.0.0-next.3e165448",
+    "react-scripts": "2.0.5",
     "web3": "1.0.0-beta.35",
     "websocket": "^1.0.28",
-    "styled-components": "^4.0.0-beta.5"
+    "styled-components": "^4.0.2"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
@@ -46,20 +46,20 @@
   },
   "devDependencies": {
     "babel-core": "^7.0.0-bridge",
-    "babel-plugin-inline-react-svg": "^0.5.4",
+    "babel-plugin-inline-react-svg": "^1.0.0",
     "babel-runtime": "^6.26.0",
-    "compression-webpack-plugin": "^1.1.11",
-    "cross-env": "^5.1.5",
-    "enzyme": "^3.3.0",
-    "enzyme-adapter-react-16": "^1.1.1",
-    "eslint": "^4.19.1",
-    "eslint-config-airbnb": "^16.1.0",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-jsx-a11y": "^6.0.3",
-    "eslint-plugin-react": "^7.8.2",
+    "compression-webpack-plugin": "^2.0.0",
+    "cross-env": "^5.2.0",
+    "enzyme": "^3.7.0",
+    "enzyme-adapter-react-16": "^1.6.0",
+    "eslint": "5.6.0",
+    "eslint-config-airbnb": "^17.1.0",
+    "eslint-plugin-import": "^2.14.0",
+    "eslint-plugin-jsx-a11y": "^6.1.2",
+    "eslint-plugin-react": "^7.11.1",
     "extract-text-webpack-plugin": "^3.0.2",
     "surge": "^0.20.1",
-    "ws": "3.3.2"
+    "ws": "6.1.0"
   },
   "browserslist": {
     "development": [
