--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.2.4",
   "private": true,
   "dependencies": {
+    "abi-decoder": "^1.2.0",
     "antd": "^3.9.2",
     "axios": "^0.18.0",
     "bluebird": "^3.5.1",
@@ -26,9 +27,9 @@
     "react-jazzicon": "^0.1.0",
     "react-router-dom": "^4.2.2",
     "react-scripts": "2.0.0-next.3e165448",
-    "web3": "1.0.0-beta.35",
-    "websocket": "^1.0.28",
-    "styled-components": "^4.0.0-beta.5"
+    "styled-components": "^4.0.0-beta.5",
+    "web3": "^1.0.0-beta.33",
+    "websocket": "^1.0.28"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
