--- a/package.json
+++ b/package.json
@@ -23,12 +23,15 @@
     "react": "16.5.2",
     "react-app-rewired": "1.6.2",
     "react-dom": "16.5.2",
+    "react-facebook-pixel": "^0.1.1",
+    "react-ga": "^2.5.3",
     "react-jazzicon": "0.1.3",
     "react-router-dom": "4.3.1",
     "react-scripts": "2.0.0-next.3e165448",
+    "react-twitter-conversion-tracker": "^1.0.0",
+    "styled-components": "4.0.0-beta.9-macro2",
     "web3": "1.0.0-beta.35",
-    "websocket": "1.0.28",
-    "styled-components": "4.0.0-beta.9-macro2"
+    "websocket": "1.0.28"
   },
   "scripts": {
     "build-css": "node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/",
