--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "aws-sdk": "^2.366.0",
     "axios": "0.18.0",
     "bluebird": "3.5.3",
+    "civic-sip-api": "^1.1.0",
     "classnames": "2.2.6",
     "dayjs": "1.7.7",
     "detect-browser": "3.0.1",
@@ -39,7 +40,7 @@
     "watch-css": "npm run build-css && node-sass-chokidar --include-path ./src --include-path ./node_modules src/ -o src/ --watch --recursive",
     "start-js": "react-app-rewired start",
     "start": "cross-env NODE_ENV=development npm run -p watch-css | npm run start-js",
-    "build-js": "GENERATE_SOURCEMAP=false react-app-rewired build",
+    "build-js": "cross-env GENERATE_SOURCEMAP=false react-app-rewired build",
     "build": "npm run build-css | npm run build-js",
     "run-test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
