--- a/now.json
+++ b/now.json
@@ -1,7 +1,10 @@
 {
   "name": "app.mybit.io",
   "env": {
-    "INFURA_API_KEY": "@infura-api-key"
+    "INFURA_API_KEY": "@infura-api-key",
+    "CIVIC_PRIVATE_KEY": "@civic-private-key",
+    "CIVIC_APP_SECRET": "@civic-app-secret",
+    "REACT_APP_CIVIC_APP_ID": "@react-app-civic-app-id"
   },
   "version": 1
 }
