made airtable work in dev and added the SDK dependency

--- a/package.json
+++ b/package.json
@@ -3,12 +3,14 @@
   "version": "0.2.4",
   "private": true,
   "dependencies": {
+    "@mybit/network.js": "0.0.11",
     "antd": "3.10.9",
     "aws-sdk": "^2.366.0",
     "axios": "0.18.0",
     "bluebird": "3.5.3",
     "civic-sip-api": "^1.1.0",
     "classnames": "2.2.6",
+    "cors": "^2.8.5",
     "dayjs": "1.7.7",
     "detect-browser": "3.0.1",
     "dotenv": "6.1.0",
