removed code related to pulling asset from server and cleaned up the updating of the state whenever metamask related things change

--- a/now.json
+++ b/now.json
@@ -9,7 +9,8 @@
     "BUCKET_REGION": "@bucket-region",
     "BUCKET_NAME": "@bucket-name",
     "AWS_SECRET_KEY": "@aws-secret-key",
-    "AWS_ACCESS_KEY": "@aws-access-key"
+    "AWS_ACCESS_KEY": "@aws-access-key",
+    "REACT_APP_INFURA_API_KEY": "@infura-api-key"
   },
   "version": 1
 }
