changed some command names in package.json in favor of more specific ones and fixed the passing of props to our MetamaskErrors component

--- a/package.json
+++ b/package.json
@@ -49,11 +49,10 @@
     "run-test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint": "eslint --ignore-path .gitignore .",
-    "now-start": "npm run compile && node lib/index.js",
+    "now-start": "npm run compile-server && node lib/index.js",
     "start-dev": "NODE_ENV=development nodemon lib/index.js",
     "lint:fix": "eslint --ignore-path .gitignore --fix .",
-    "compile": "rimraf lib/ && babel -d lib/ server/",
-    "compile-dev": "rimraf lib/ && NODE_ENV=development babel -d lib/ server/"
+    "compile-server": "rimraf lib/ && babel -d lib/ server/",
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
