--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "react-facebook-pixel": "0.1.1",
     "react-ga": "2.5.6",
     "react-geocode": "^0.1.2",
+    "react-google-places-suggest": "^3.7.1",
     "react-jazzicon": "0.1.3",
     "react-resize-detector": "^3.4.0",
     "react-router-dom": "4.3.1",
