--- a/.babelrc
+++ b/.babelrc
@@ -1,66 +1,29 @@
 {
-  "env": {
-    "test": {
-      "presets": [["next/babel", { "preset-env": { "modules": "commonjs" } }]],
-      "plugins": [
-      ["module-resolver", {
-          "root": ["."],
-          "alias": {
-            "public": "./public",
-            "components": "./components",
-            "constants": "./constants",
-            "utils": "./utils",
-            "ui": "./components/UI",
-            "hooks": "./hooks",
-          }
-        }],
-        ["styled-components", {"ssr": true, "displayName": true, "preprocess": false }],
-        ["inline-react-svg" ],
-        ["transform-assets-import-to-string", {"baseDir": "public","baseUri": "/" }],
-        ["react-hot-loader/babel"]
-      ]
-    },
-    "development": {
-      "presets": ["next/babel"],
-      "plugins": [
-        ["module-resolver", {
-          "root": ["."],
-          "alias": {
-            "public": "./public",
-            "components": "./components",
-            "constants": "./constants",
-            "utils": "./utils",
-            "ui": "./components/UI",
-            "hooks": "./hooks",
-          }
-        }],
-        ["import", {"libraryName": "antd","style": "less"}],
-        ["styled-components", {"ssr": true, "displayName": true, "preprocess": false }],
-        ["inline-react-svg" ],
-        ["transform-assets-import-to-string", {"baseDir": "public","baseUri": "/" }],
-        ["react-hot-loader/babel"]
-      ]
-    },
-    "production": {
-      "presets": ["next/babel"],
-      "plugins": [
-        ["module-resolver", {
-          "root": ["."],
-          "alias": {
-            "public": "./public",
-            "components": "./components",
-            "constants": "./constants",
-            "utils": "./utils",
-            "ui": "./components/UI",
-            "hooks": "./hooks",
-          }
-        }],
-        ["import", {"libraryName": "antd","style": "less"}],
-        ["styled-components", {"ssr": true, "displayName": true, "preprocess": false }],
-        ["inline-react-svg" ],
-        ["transform-assets-import-to-string", {"baseDir": "public","baseUri": "/" }],
-        ["transform-remove-console"]
-      ]
-    }
-  }
+  "presets": ["next/babel"],
+  "plugins": [
+    [
+      "module-resolver",
+      {
+        "alias": {
+          "public": "./public",
+          "components": "./components",
+          "constants": "./constants",
+          "utils": "./utils",
+          "ui": "./components/UI",
+          "hooks": "./hooks"
+        }
+      }
+    ],
+    ["import", { "libraryName": "antd", "style": "less" }],
+    [
+      "styled-components",
+      { "ssr": true, "displayName": true, "preprocess": false }
+    ],
+    ["inline-react-svg"],
+    [
+      "transform-assets-import-to-string",
+      { "baseDir": "public", "baseUri": "/" }
+    ],
+    ["transform-remove-console"]
+  ]
 }
