--- a/package.json
+++ b/package.json
@@ -2,68 +2,62 @@
   "name": "frontend",
   "version": "1.1.0",
   "private": true,
-  "resolutions": {
-    "terser": "3.14.1"
-  },
   "dependencies": {
-    "3box": "^1.9.0",
-    "@antv/data-set": "0.10.1",
-    "@mybit/network.js": "0.0.51",
-    "@zeit/next-bundle-analyzer": "0.1.2",
+    "3box": "1.16.1",
+    "@antv/data-set": "0.10.2",
+    "@babel/cli": "7.8.3",
+    "@babel/core": "7.8.3",
+    "@babel/preset-env": "^7.8.3",
+    "@mybit/network.js": "0.0.52",
+    "@next/bundle-analyzer": "^9.2.1",
     "@zeit/next-css": "1.0.1",
-    "antd": "3.13.6",
-    "axios": "0.19.0",
-    "babel-plugin-import": "1.11.0",
-    "babel-plugin-inline-react-svg": "1.0.1",
-    "babel-plugin-styled-components": "1.10.0",
+    "antd": "3.26.7",
+    "axios": "0.19.2",
+    "babel-plugin-import": "1.13.0",
+    "babel-plugin-inline-react-svg": "1.1.1",
+    "babel-plugin-module-resolver": "4.0.0",
+    "babel-plugin-styled-components": "1.10.7",
     "babel-plugin-transform-assets-import-to-string": "^1.2.0",
-    "bizcharts": "3.4.1",
+    "babel-plugin-transform-remove-console": "6.9.4",
+    "bizcharts": "3.5.6",
     "color-hash": "1.0.3",
-    "dayjs": "1.8.8",
+    "cross-env": "7.0.0",
+    "dayjs": "1.8.19",
     "detect-browser": "4",
-    "dotenv": "6.2.0",
+    "dotenv": "8.2.0",
     "dotenv-webpack": "1.7.0",
-    "ipfs-http-client": "^33.1.0",
-    "is-ipfs": "^0.6.1",
-    "js-cookie": "2.2.0",
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "18.0.1",
+    "eslint-plugin-import": "2.20.0",
+    "eslint-plugin-jsx-a11y": "6.2.3",
+    "eslint-plugin-react": "7.18.0",
+    "ipfs": "^0.40.0",
+    "ipfs-http-client": "^41.0.1",
+    "is-ipfs": "^0.6.3",
+    "js-cookie": "2.2.1",
+    "multicodec": "0.5.6",
     "next": "9.2.1",
     "prop-types": "15.7.2",
-    "react": "16.8",
-    "react-dom": "16.8",
-    "react-geocode": "0.1.2",
-    "react-google-maps-loader": "4.2.5",
-    "react-google-places-suggest": "3.7.1",
+    "react": "16.12",
+    "react-dom": "16.12",
+    "react-geocode": "0.2.1",
+    "react-google-maps-loader": "4.2.6",
+    "react-google-places-suggest": "3.9.2",
+    "react-hot-loader": "4.12.19",
     "react-jazzicon": "0.1.3",
-    "react-media": "1.9.2",
-    "react-resize-detector": "3.4.0",
+    "react-media": "1.10.0",
+    "react-resize-detector": "4.2.1",
     "react-scrollable-anchor": "^0.6.1",
     "recompose": "0.30.0",
-    "styled-components": "4.1.3",
-    "web3": "1.2.4"
+    "styled-components": "5.0.0"
   },
   "scripts": {
     "clean": "rm -rf .next build",
-    "dev": "NODE_ENV=development next dev -p 8081 -H 127.0.0.1 || true",
-    "build": "next build",
-    "export": "next export -o build",
-    "lint": "eslint --ignore-path .gitignore .",
-    "lint:fix": "eslint --ignore-path .gitignore --fix .",
-    "analyze": "cross-env BUNDLE_ANALYZE=both next build",
-    "analyze:server": "cross-env BUNDLE_ANALYZE=server next build",
-    "analyze:browser": "cross-env BUNDLE_ANALYZE=browser next build"
-  },
-  "devDependencies": {
-    "@babel/cli": "7.2.3",
-    "@babel/core": "7.2.2",
-    "@babel/preset-env": "7.2.3",
-    "babel-plugin-module-resolver": "3.2.0",
-    "babel-plugin-transform-remove-console": "6.9.4",
-    "cross-env": "5.2.0",
-    "eslint-config-airbnb": "17.1.0",
-    "eslint-plugin-import": "2.16.0",
-    "eslint-plugin-jsx-a11y": "6.2.1",
-    "eslint-plugin-react": "7.12.4",
-    "react-hot-loader": "4.6.3"
+    "dev": "cross-env NODE_ENV=development ANALYZE=false next dev -p 8081 -H 127.0.0.1 || true",
+    "build": "cross-env NODE_ENV=production ANALYZE=false next build",
+    "export": "cross-env NODE_ENV=production ANALYZE=false next export -o build",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "browserslist": {
     "development": [
