testing circle ci and node build

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,7 +8,6 @@ jobs:
       - deploy:
           name: Deploy to IPFS
           command: |
-            yarn install
+            yarn install --ignore-engines
             yarn run build
             yarn run export
-            npx ipfs-deploy -p pinata -d cloudflare build
