--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "eslint-plugin-jsx-a11y": "6.2.3",
     "eslint-plugin-react": "7.18.0",
     "ipfs": "^0.40.0",
+    "ipfs-deploy": "^7.14.0",
     "ipfs-http-client": "^41.0.1",
     "is-ipfs": "^0.6.3",
     "js-cookie": "2.2.1",
