memory and local caching requests with axios logging changed from console.log to console.error for errors

--- a/.babelrc
+++ b/.babelrc
@@ -19,7 +19,11 @@
       "styled-components",
       { "ssr": true, "displayName": true, "preprocess": false }
     ],
-    ["inline-react-svg"],
-    ["transform-remove-console"]
-  ]
+    ["inline-react-svg"]
+  ],
+  "env": {
+    "production": {
+      "plugins": ["transform-remove-console"]
+    }
+  }
 }
